--- a/GoShop/package.json
+++ b/GoShop/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.27.15",
     "@hookform/resolvers": "^5.2.1",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.85.3",
@@ -17,6 +18,7 @@
     "@types/lodash": "^4.17.20",
     "axios": "^1.11.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
