--- a/GoShop/package.json
+++ b/GoShop/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^5.85.3",
     "@types/lodash": "^4.17.20",
     "axios": "^1.11.0",
+    "classnames": "^2.5.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
