--- a/GoShop/package.json
+++ b/GoShop/package.json
@@ -18,6 +18,7 @@
     "@types/lodash": "^4.17.20",
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
+    "dompurify": "^3.2.6",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
