--- a/GoShop/package.json
+++ b/GoShop/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
     "dompurify": "^3.2.6",
+    "framer-motion": "^12.23.12",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
