--- a/GoShop/package.json
+++ b/GoShop/package.json
@@ -20,12 +20,14 @@
     "classnames": "^2.5.1",
     "dompurify": "^3.2.6",
     "framer-motion": "^12.23.12",
+    "i18next": "^25.5.2",
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-i18next": "^15.7.3",
     "react-router-dom": "^7.8.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.12",
