--- a/GoShop/package.json
+++ b/GoShop/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "typecheck": "tsc -b"
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.15",
@@ -31,14 +32,15 @@
     "react-router-dom": "^7.8.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.12",
-    "yup": "^1.7.0"
+    "yup": "^1.7.0",
+    "vite": "^7.1.2",
+    "@vitejs/plugin-react": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/node": "^24.3.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
@@ -46,7 +48,6 @@
     "rollup-plugin-visualizer": "^6.0.3",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2",
     "vitest": "^3.2.4"
   }
 }
