--- a/GoShop/package.json
+++ b/GoShop/package.json
@@ -50,5 +50,9 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vitest": "^3.2.4"
-  }
+  },
+  "engines": {
+  "node": "18.x"
+}
+
 }
