--- a/GoShop/package.json
+++ b/GoShop/package.json
@@ -3,14 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-"scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview",
-  "lint": "eslint .",
-  "typecheck": "tsc -b"
-},
-
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint .",
+    "typecheck": "tsc -b"
+  },
   "dependencies": {
     "@floating-ui/react": "^0.27.15",
     "@hookform/resolvers": "^5.2.1",
@@ -18,6 +17,7 @@
     "@tanstack/react-query": "^5.85.3",
     "@tanstack/react-query-devtools": "^5.85.3",
     "@types/lodash": "^4.17.20",
+    "@vitejs/plugin-react": "^5.0.0",
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
     "dompurify": "^3.2.6",
@@ -28,17 +28,18 @@
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.62.0",
     "react-i18next": "^15.7.3",
     "react-router-dom": "^7.8.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.12",
-    "yup": "^1.7.0",
     "vite": "^7.1.2",
-    "@vitejs/plugin-react": "^5.0.0"
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/html-to-text": "^9.0.4",
     "@types/node": "^24.3.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
@@ -46,13 +47,14 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "html-to-text": "^9.0.5",
+    "react-helmet": "^6.1.0",
     "rollup-plugin-visualizer": "^6.0.3",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vitest": "^3.2.4"
   },
   "engines": {
-  "node": "18.x"
-}
-
+    "node": "18.x"
+  }
 }
