--- a/GoShop/package.json
+++ b/GoShop/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint .",
-    "typecheck": "tsc -b"
+    "typecheck": "tsc -b",
+    "test": "vitest"
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.15",
